<resources>
    <!-- Unused strings have not been removed from the original template yet
         This is to avoid merge conflicts and build issues with other files -->
    <string name="app_name">E-card</string>
    <string name="main_screen">Cards</string>
    <string name="img_fail">Img could not be loaded</string>
    <string name="profile_home">Profile</string>
    <string name="camera_home">Camera</string>
    <string name="camera_text">Scan a profiles QR code</string>
    <string name="title_activity_login">Log IN</string>
    <string name="Preview_Card">Card Preview</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- The hints in the UI text -->
    <string name="descriptionHint">Description</string>
    <string name="phoneHint">Phone</string>
    <string name="emailHint">E-mail</string>

    <!-- Image text descriptions -->
    <string name="phone_image">Phone</string>
    <string name="email_image">Email</string>

    <!-- Other profile Info -->
    <string name="template1">Template 1</string>
    <string name="template2">Template 2</string>
    <string name="SaveChanges">Save Changes</string>

    <!-- Default strings for Cards sections -->
    <string name="name_default">Card Preview</string>
    <string name="description_default">Cards Description...</string>
    <string name="phone_default">(204) def-ault</string>
    <string name="email_default">default@gmail.com</string>
    <string name="loading_default">loading</string>

    <!-- Tags of View elements associated with cards -->
    <string name="name_tag">name</string>
    <string name="description_tag">description</string>
    <string name="phone_tag">phone</string>
    <string name="email_tag">email</string>
    <string name="template_tag">template</string>
    <string name="service_tag">service</string>
    <string name="address_tag">address</string>

    <!--    Login page resources    -->
    <string name="button_login">Log In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_logout">Log Out </string>
    <string name="firstName">First Name</string>
    <string name="middleName">MiddleName</string>
    <string name="lastName">LastName</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="roadNumber">Rd #</string>
    <string name="houseNumber">house #</string>
    <string name="postalCode">Postal Code</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="emailAddress">Email</string>
    <string name="homePhone">Home Phone</string>
    <string name="cellPhone">Cell</string>
    <string name="service">Service</string>
    <string name="done">Done</string>
    <string-array name="ca_provinces">
        <item>MB</item>
        <item>AB</item>
        <item>BC</item>
        <item>ON</item>
        <item>NL</item>
        <item>PE</item>
        <item>NS</item>
        <item>NB</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
        <item>NT</item>
        <item>NU</item>
    </string-array>
    <string-array name="services_spinner_items">
        <item>Auto Body Technician</item>
        <item>Brick and Stone Mason</item>
        <item>Cabinet Maker</item>
        <item>Carpenter</item>
        <item>Cleaner</item>
        <item>Drywall Finisher and Plasterer</item>
        <item>Electrician</item>
        <item>Engineer</item>
        <item>Hairstylist</item>
        <item>Heat and Frost Insulator</item>
        <item>House and Room Designer</item>
        <item>Instructor</item>
        <item>Ironworker</item>
        <item>Locksmith</item>
        <item>Millwright</item>
        <item>Mime</item>
        <item>Musician</item>
        <item>Nothing much</item>
        <item>Painter</item>
        <item>Refrigeration and Air Conditioning Mechanic</item>
        <item>Personal Doctor</item>
        <item>Roofer</item>
        <item>Software Developer</item>
        <item>Teacher Assistant</item>
        <item>Therapist</item>
        <item>Legally an Assassin</item>
    </string-array>
</resources>